PlaindLink and Dwolla

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ PLAID_PRODUCTS=auth,transactions,identity
 PLAID_COUNTRY_CODES=US,CA
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
+DWOLLA_KEY=sB5s4w4omkjGpV4mAujS4Na0PCJSlqG6rIaT14UyzFAPpsA4Br
+DWOLLA_SECRET=jeMay47ph8CdtU0b6xvofPUuBoTbvCcrdnESKNdCZe3MukmqeV
 DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
 DWOLLA_ENV=sandbox
